--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>website hacked!</h1>
-<p>site hackeado. seus sistemas sao falhos! para recuperar o site, entre em contato com specttheduck@duck.com . voces tem 60 dias.</p>
+<p>site hackeado. seus sistemas sao falhos! by: cyberassasin & spectrum.</p>
